[gd_scene load_steps=2 format=3 uid="uid://bou2dich2utxy"]

[ext_resource type="Script" uid="uid://bm4532ocsjba3" path="res://Spawner/tank_spawner.gd" id="1_6yxwq"]

[node name="tank_spawner" type="Node2D"]
script = ExtResource("1_6yxwq")

[node name="spawn_start" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="spawn_interval" type="Timer" parent="."]
wait_time = 20.0

[node name="spawn_increase" type="Timer" parent="."]
wait_time = 20.0

[node name="life_increase" type="Timer" parent="."]
wait_time = 40.0
autostart = true

[connection signal="timeout" from="spawn_start" to="." method="_on_spawn_start_timeout"]
[connection signal="timeout" from="spawn_interval" to="." method="_on_spawn_interval_timeout"]
[connection signal="timeout" from="spawn_increase" to="." method="_on_spawn_increase_timeout"]
[connection signal="timeout" from="life_increase" to="." method="_on_life_increase_timeout"]
